# VEDA

./: main.py  pyproject.toml
app/scrapers/: anthropic.py  openai.py  youtube.py
app/services/: process_youtube.py
